--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     </h1>
 
     <form id="hello-form">
+      
       <fieldset>
         <label for="name">Say hello to:</label>
         <input type="text" name="name" value="" />
+        <input type="text" surname="surname" value="" />
         <button type="submit">Say it!</button>
       </fieldset>
+      
     </form>
 
     <h1 id="display-hello"></h1>
